--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: Sashabrava blog
 email: sashabrava0@gmail.com
 github_username: sashabrava
 description: Sashabrava blog about IT
+
+permalink: /:year/:title:output_ext
