--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ title: Sashabrava blog
 email: sashabrava0@gmail.com
 github_username: sashabrava
 description: Sashabrava blog about IT
+google_analytics: UA-111956421-1
 
 permalink: /:year/:title:output_ext
